--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="conf"/>
 	<classpathentry kind="lib" path="C:/Project/Pronto/OpenNLP/slf4j-simple-1.7.12.jar"/>
 	<classpathentry kind="lib" path="C:/Project/Pronto/OpenNLP/apache-opennlp-1.6.0/lib/opennlp-tools-1.5.3.jar"/>
 	<classpathentry kind="lib" path="C:/Project/Pronto/OpenNLP/apache-opennlp-1.6.0/lib/opennlp-maxent-3.0.3.jar"/>
